Fixed header section height again to eliminate scrollbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ a {
 }
 
 .header-section {
-    height: 340px;
+    height: 345px;
     color: hsl(0, 0%, 85%);
     display: flex;
     flex-direction: column;
